--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,10 +1,19 @@
 @import '../../styles/varibles';
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 .Card{
+  margin-right: 80px;
+
   h3{
+    margin-bottom: 15px;
     color: $blue;
+    font-family: Bebas Neue;
+    font-size: 25px;
+    font-weight: 400;
   }
   p{
     color: $black-blue;
+    font-size: 20px;
+
   }
 }
