--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -3,6 +3,12 @@
 
 .Card{
   margin-right: 80px;
+  height: 30vh;
+  @media screen and (max-width: 600px){
+    &{
+      margin-right: 25px;
+    }
+  }
 
   h3{
     margin-bottom: 15px;
@@ -10,10 +16,20 @@
     font-family: Bebas Neue;
     font-size: 25px;
     font-weight: 400;
+    @media screen and (max-width: 600px){
+      &{
+        font-size: 16px;
+      }
+    }
   }
   p{
     color: $black-blue;
     font-size: 20px;
+    @media screen and (max-width: 600px){
+      &{
+        font-size: 14px;
+      }
+    }
 
   }
 }
