--- a/src/Components/Header/_header.scss
+++ b/src/Components/Header/_header.scss
@@ -8,12 +8,26 @@ header{
     font-weight: 700;
     font-size: 56px;
     line-height: 100%;
+    @media screen and (max-width: 600px){
+    & {
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 59px;
+
+    }
+}
+    
   }
   .vertical-gradient {
     margin-right: 78px;
     height: 120px; 
     width: 5px;   
     background: linear-gradient(to bottom, $blue, $fuschia);
+    @media screen and (max-width: 600px){
+      & {
+        margin: 0;
     
-  }
+    }
+}
+}
 }
